# upils

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.chglog/: CHANGELOG.tpl.md  config.yml
.github/workflows/: makefile.yml
kum_utils/: dt.py
tests/: test_datetime.py  test_dt.py  test_iterable.py  test_list.py  test_slate_converter.py  test_string.py
upils/: datetime.py  slate_converter.py  string.py
