[tool.poetry]
name = "upils"
version = "0.1.1"
description = ""
authors = ["Aslam Hadi Harsono <aslam.hadi@kumparan.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.6"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
